testsuite/tests/indexed-types/should_fail/T14175.stderr

T14175.hs:7:42: error:
    • Expecting one more argument to ‘k’
      Expected a type, but ‘k’ has kind ‘j -> *’
    • In a compiler-generated top-level kind signature for ‘PComp’:
        forall (k :: j -> Type) -> k -> ()
